--- a/src/notebooks/lgssm.ipynb
+++ b/src/notebooks/lgssm.ipynb
@@ -17,8 +17,8 @@
     "\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "from feynmac_kac.protocol import FeynmacKac, PFConfig\n",
-    "from feynmac_kac.bootstrap import BootstrapParticleFilter\n",
+    "from feynman_kac.protocol import FeynmacKac, PFConfig\n",
+    "from feynman_kac.bootstrap import BootstrapParticleFilter\n",
     "from utils.datasets import load_dataset\n",
     "\n"
    ]
