--- a/src/notebooks/tests/BPF.ipynb
+++ b/src/notebooks/tests/BPF.ipynb
@@ -7,7 +7,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from model.lgssm import LGSSMModel\n",
     "\n",
     "import jax.random as jr\n",
     "import jax.numpy as jnp\n",
@@ -19,8 +18,9 @@
     "\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "from feynmac_kac.protocol import FeynmacKac, PFConfig, PFOutputs\n",
-    "from feynmac_kac.bootsrap_2 import BPF, ConditionalBPF\n",
+    "from feynman_kac.protocol import FeynmacKac, PFConfig, PFOutputs\n",
+    "from feynman_kac.bootstrap import BPF, ConditionalBPF\n",
+    "from feynmanc_kac.model.lgssm import LGSSMModel\n",
     "\n",
     "from resample.backward_sampling import LineageTracking\n",
     "from utils.datasets import load_dataset"
@@ -28,7 +28,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 16,
+   "id": "b62f9a27-46b0-4865-9bdd-f169ce8a29d4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('__init__', <function ConditionalBPF.__init__ at 0x70d0fc1bdd00>), ('filter', <function BaseParticleFilter.filter at 0x70d0fc1bd6c0>), ('step', <function ConditionalBPF.step at 0x70d0fc1bde40>), ('t0', <function ConditionalBPF.t0 at 0x70d0fc1bdda0>), ('update_params', <function BaseParticleFilter.update_params at 0x70d0fc1bd8a0>)]\n",
+      "(<class 'feynman_kac.bootstrap.ConditionalBPF'>, <class 'feynman_kac.bootstrap.BaseParticleFilter'>, <class 'abc.ABC'>, <class 'object'>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import inspect\n",
+    "\n",
+    "methods = inspect.getmembers(ConditionalBPF, predicate=inspect.isfunction)\n",
+    "parent = inspect.getmro(ConditionalBPF)\n",
+    "print(methods) # Output: [('method1', <function MyClass.method1>),\n",
+    "print(parent)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "e71aeaa3-3bc0-439d-87b9-9db4b0010b1a",
    "metadata": {},
    "outputs": [],
@@ -322,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "id": "4f0382f1-8a5b-4054-a64d-e131a72d1e34",
    "metadata": {},
    "outputs": [
@@ -347,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "id": "d570d909-2e2b-4e73-9b12-1fa8c0fbfc5f",
    "metadata": {},
    "outputs": [
@@ -357,7 +381,7 @@
        "(300, 50)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -368,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "id": "13888743-11da-47ff-983e-e9bedea41975",
    "metadata": {},
    "outputs": [
