--- a/src/notebooks/tests/old/particle-gibbs-low-var-more-iters.ipynb
+++ b/src/notebooks/tests/old/particle-gibbs-low-var-more-iters.ipynb
@@ -10,8 +10,8 @@
     "from mcmc.particle_gibbs import ParticleGibbs, PGSamples, PGConfig\n",
     "from mcmc.rwmh import RandomWalkMH, RWMHConfig, MatrixRWMH, CovarianceRWMH\n",
     "\n",
-    "from feynmac_kac.protocol import CSMC, PFOutputs, PFConfig, FeynmacKac\n",
-    "from feynmac_kac.bootstrap import ConditionalBPF, BootstrapParticleFilter\n",
+    "from feynman_kac.protocol import CSMC, PFOutputs, PFConfig, FeynmacKac\n",
+    "from feynman_kac.bootstrap import ConditionalBPF, BootstrapParticleFilter\n",
     "\n",
     "from model.lgssm import LGSSMModel\n",
     "from utils.datasets import load_dataset\n",
