--- a/src/notebooks/tests/old/stoch-vol.ipynb
+++ b/src/notebooks/tests/old/stoch-vol.ipynb
@@ -33,9 +33,9 @@
     "    LinearGaussianSSM as dmax_LGSSM,\n",
     ")\n",
     "\n",
-    "from feynmac_kac.protocol import FeynmacKac, PFConfig, PFOutputs, CSMC\n",
-    "from feynmac_kac.bootstrap import BootstrapParticleFilter\n",
-    "from feynmac_kac.utils import log_normalize, ess\n",
+    "from feynman_kac.protocol import FeynmacKac, PFConfig, PFOutputs, CSMC\n",
+    "from feynman_kac.bootstrap import BootstrapParticleFilter\n",
+    "from feynman_kac.utils import log_normalize, ess\n",
     "\n",
     "from resample.resamplers import RESAMPLERS, single_multinomial, multinomial_resample\n",
     "\n",
