--- a/src/notebooks/tests/old/csmc.ipynb
+++ b/src/notebooks/tests/old/csmc.ipynb
@@ -29,8 +29,8 @@
     "\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "from feynmac_kac.protocol import FeynmacKac, PFConfig\n",
-    "from feynmac_kac.bootstrap import BootstrapParticleFilter, ConditionalBPF\n",
+    "from feynman_kac.protocol import FeynmacKac, PFConfig\n",
+    "from feynman_kac.bootstrap import BootstrapParticleFilter, ConditionalBPF\n",
     "from utils.datasets import load_dataset"
    ]
   },
