--- a/src/notebooks/tests/old/tempering-Copy2.ipynb
+++ b/src/notebooks/tests/old/tempering-Copy2.ipynb
@@ -17,8 +17,8 @@
     "import jax\n",
     "\n",
     "from resample.resamplers import RESAMPLERS\n",
-    "from feynmac_kac.utils import log_normalize, ess\n",
-    "from feynmac_kac.protocol import FeynmacKac, PFConfig, PFOutputs, CSMC\n",
+    "from feynman_kac.utils import log_normalize, ess\n",
+    "from feynman_kac.protocol import FeynmacKac, PFConfig, PFOutputs, CSMC\n",
     "\n",
     "from jax.scipy.stats import multivariate_normal\n",
     "\n",
@@ -30,7 +30,7 @@
     "from model.lgssm import LGSSMModel\n",
     "from utils.datasets import load_dataset\n",
     "\n",
-    "from feynmac_kac.bootstrap import BootstrapParticleFilter\n"
+    "from feynman_kac.bootstrap import BootstrapParticleFilter\n"
    ]
   },
   {
