refactor BaseParticle Filter to separate file

--- a/src/notebooks/tests/BPF.ipynb
+++ b/src/notebooks/tests/BPF.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "ad7d67e9-dd28-4ba9-994b-6b44ad756a2d",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
     "\n",
     "from feynman_kac.protocol import FeynmacKac, PFConfig, PFOutputs\n",
     "from feynman_kac.bootstrap import BPF, ConditionalBPF\n",
-    "from feynmanc_kac.model.lgssm import LGSSMModel\n",
+    "from feynman_kac.model.lgssm import LGSSMModel\n",
     "\n",
     "from resample.backward_sampling import LineageTracking\n",
     "from utils.datasets import load_dataset"
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "id": "b62f9a27-46b0-4865-9bdd-f169ce8a29d4",
    "metadata": {},
    "outputs": [
@@ -36,7 +36,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[('__init__', <function ConditionalBPF.__init__ at 0x70d0fc1bdd00>), ('filter', <function BaseParticleFilter.filter at 0x70d0fc1bd6c0>), ('step', <function ConditionalBPF.step at 0x70d0fc1bde40>), ('t0', <function ConditionalBPF.t0 at 0x70d0fc1bdda0>), ('update_params', <function BaseParticleFilter.update_params at 0x70d0fc1bd8a0>)]\n",
+      "[('__init__', <function ConditionalBPF.__init__ at 0x7df80419e480>), ('filter', <function BaseParticleFilter.filter at 0x7df80419df80>), ('step', <function ConditionalBPF.step at 0x7df80419e5c0>), ('t0', <function ConditionalBPF.t0 at 0x7df80419e520>), ('update_params', <function BaseParticleFilter.update_params at 0x7df80419e020>)]\n",
       "(<class 'feynman_kac.bootstrap.ConditionalBPF'>, <class 'feynman_kac.bootstrap.BaseParticleFilter'>, <class 'abc.ABC'>, <class 'object'>)\n"
      ]
     }
