i-RW-CSMC implementation

--- a/src/notebooks/tests/pGibbs.ipynb
+++ b/src/notebooks/tests/pGibbs.ipynb
@@ -360,6 +360,35 @@
     "ax[1, 1].set_title(\"R\")\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fa50df7e-cc28-41e8-bb1d-e2b23f3f88cc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# calculate weighted estimates of state means\n",
+    "x_hat = jnp.sum(pf_outs.weights[:, :, None] * pf_outs.particles, axis=1)\n",
+    "print(\"CSMC weighted x_t shape: \", x_hat.shape)\n",
+    "\n",
+    "# calculate MSE against true filter means\n",
+    "mse = jnp.mean((x_hat - lgssm_posterior.filtered_means)**2)\n",
+    "print(\"MSE from CSMC to exact filter means: \", mse)\n",
+    "\n",
+    "# plot results\n",
+    "observation_marker_kwargs = {\"marker\": \"o\", \"markerfacecolor\": \"none\", \"markeredgewidth\": 2, \"markersize\": 8}\n",
+    "fig, ax = plt.subplots(figsize=(15, 5))\n",
+    "# ax.plot(y[:, 3], ls=\"\", **observation_marker_kwargs, color=\"tab:green\", label=\"observed\")\n",
+    "ax.plot(x[:, 3], ls=\"--\", color=\"darkgrey\", label=\"true state\")\n",
+    "# ax.plot(lgssm_posterior.smoothed_means[:, 3], color=\"blue\", label=\"smoothed mean\")\n",
+    "ax.plot(lgssm_posterior.filtered_means[:, 3], color=\"green\", label=\"filtered mean\")\n",
+    "ax.plot(x_hat[:, 3], color=\"tab:red\", label=\"CSMC estimate\")\n",
+    "plt.legend()\n",
+    "plt.show()\n",
+    "print(\"\\n\\n\")"
+   ]
   }
  ],
  "metadata": {
