Particle MALA implementation

--- a/src/notebooks/tests/pGibbs-i-RW-CSMC.ipynb
+++ b/src/notebooks/tests/pGibbs-i-RW-CSMC.ipynb
@@ -11,7 +11,7 @@
     "from mcmc.rwmh import RandomWalkMH, RWMHConfig, MatrixRWMH, CovarianceRWMH\n",
     "\n",
     "from feynman_kac.protocol import PFOutputs, PFConfig, FeynmacKac\n",
-    "from feynman_kac.bootstrap import CSMC, PF, BaseParticleFilter, iRWCSMC\n",
+    "from feynman_kac.bootstrap import CSMC, PF, BaseParticleFilter, iRWCSMC, PaMALA\n",
     "\n",
     "from resample.backward_sampling import BaseBackwardSampler, LineageTracking, BackwardSampler\n",
     "\n",
